# goit-web-hw-2

./: Dockerfile  pyproject.toml  result.txt
