[tool.poetry]
name = "goit-web-hw-2"
version = "0.1.0"
description = ""
authors = ["Alexander Ivanitskiy <negalapetrovna77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pathlib = "^1.0.1"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
